<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/host"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:text="@string/host" />

            <EditText
                android:id="@+id/hostInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:autofillHints="@string/host"
                android:hint="@string/host"
                android:text="host"></EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/port"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:text="@string/port" />

            <EditText
                android:id="@+id/portInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:autofillHints="@string/port"
                android:hint="@string/port"
                android:text="port"></EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/username"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:text="@string/username" />

            <EditText
                android:id="@+id/usernameInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:autofillHints="@string/username"
                android:hint="@string/username"
                android:text="username"></EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:text="@string/password" />

            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:autofillHints="@string/password"
                android:hint="@string/password"
                android:text="1883"></EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/clientId"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:text="@string/clientId" />

            <EditText
                android:id="@+id/clientIdInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:autofillHints="clientId"
                android:hint="@string/clientId"
                android:inputType="text"
                android:text="@string/client1"></EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/randomBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/random" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/subjectTopic"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:text="@string/subjectTopic" />

            <EditText
                android:id="@+id/subjectTopicInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:autofillHints="/test"
                android:hint="@string/defaultTopic"
                android:inputType="text"
                android:text="@string/defaultTopic"></EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/subjectQos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/subjectQos" />

            <Button
                android:id="@+id/subjectButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/subjectButton" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/topic"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:text="@string/topic" />

            <EditText
                android:id="@+id/publishTopicInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:autofillHints="/test"
                android:hint="@string/defaultTopic"
                android:inputType="text"
                android:text="@string/defaultTopic"></EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/publishPayload"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:text="@string/payload" />

            <EditText
                android:id="@+id/publishPayloadInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:autofillHints="/test"
                android:hint="@string/hi"
                android:inputType="text"
                android:text="@string/hi"></EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/publishQos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/subjectQos" />

            <Button
                android:id="@+id/publishButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/publishButton" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/logView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/log"></TextView>
        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>